--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-responsive-carousel": "^3.1.35",
     "react-router-dom": "^4.2.2"
   },
   "scripts": {
